# project-euler

./: Problem_10.py  Problem_11.py  Problem_12.py  Problem_13.py  Problem_14.py  Problem_15.py  Problem_16.py  Problem_17.py  Problem_18.py  Problem_19.py  Problem_2.py  Problem_21.py  Problem_3.py  Problem_4.py  Problem_5.py  Problem_6.py  Problem_67.py  Problem_7.py  Problem_8.py  Problem_9.py  README.md  pyproject.toml
