[tool.poetry]
name = "project_euler"
version = "0.1.0"
description = ""
authors = ["MattiooFR <dugue.mathieu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.3"
num2words = "^0.5.10"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
